--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appnope==0.1.0
 backcall==0.1.0
 bleach==2.1.3
+cycler==0.10.0
 decorator==4.3.0
 dukpy==0.2.0
 entrypoints==0.2.3
@@ -19,9 +20,11 @@ jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 jupyter-echarts-pypkg==0.1.1
+kiwisolver==1.0.1
 lml==0.0.2
 macropy3==1.1.0b2
 MarkupSafe==1.0
+matplotlib==2.2.2
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
@@ -30,6 +33,7 @@ numpy==1.14.5
 pandas==0.23.1
 pandocfilters==1.4.2
 parso==0.2.1
+patsy==0.5.0
 pexpect==4.6.0
 pickleshare==0.7.4
 Pillow==5.1.0
@@ -39,13 +43,16 @@ pyecharts==0.5.5
 pyecharts-javascripthon==0.0.6
 pyecharts-jupyter-installer==0.0.3
 Pygments==2.2.0
+pyparsing==2.2.0
 python-dateutil==2.7.3
 pytz==2018.4
 pyzmq==17.0.0
 qtconsole==4.3.1
+scipy==1.1.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
+statsmodels==0.9.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.0.2
