--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ decorator==4.3.0
 dukpy==0.2.0
 entrypoints==0.2.3
 future==0.16.0
+hmmlearn==0.2.0
 html5lib==1.0.1
 ipykernel==4.8.2
 ipython==6.4.0
@@ -22,6 +23,7 @@ jupyter-core==4.4.0
 jupyter-echarts-pypkg==0.1.1
 kiwisolver==1.0.1
 lml==0.0.2
+lowess==0.1.dev0
 macropy3==1.1.0b2
 MarkupSafe==1.0
 matplotlib==2.2.2
@@ -48,6 +50,7 @@ python-dateutil==2.7.3
 pytz==2018.4
 pyzmq==17.0.0
 qtconsole==4.3.1
+scikit-learn==0.19.1
 scipy==1.1.0
 seaborn==0.8.1
 Send2Trash==1.5.0
