--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ pytz==2018.4
 pyzmq==17.0.0
 qtconsole==4.3.1
 scikit-learn==0.17.1
+scikit-misc==0.1.1
 scipy==1.1.0
 seaborn==0.8.1
 Send2Trash==1.5.0
